Fix elements jumping if scrollbar appears (by enabling it by default)

--- a/styles/styles_main.css
+++ b/styles/styles_main.css
@@ -1,3 +1,4 @@
+
 /* Bootstrap protection */
 
 * {
@@ -15,6 +16,7 @@ body {
 		padding: 0px;
 		margin: 0px;
 		box-sizing: initial;
+		overflow-y: scroll;
 }
 
 /* End Of Bootstrap protection */
